# tsuchita

./: Cargo.toml  README.md
.github/workflows/: rust-linux.yml
config/: keymap.toml  theme.toml  tsuchita.toml
src/client/: error.rs  main.rs  run.rs  tree.rs
src/client/commands/: command_keybind.rs  commands.rs  cursor_move.rs  mod.rs  quit.rs  reload.rs  search.rs  search_glob.rs  search_string.rs  selection.rs  sort.rs
src/client/config/: keymap.rs  mod.rs
src/client/config/default/: client.rs  default.rs  display.rs  mod.rs  server.rs  sort.rs
src/client/config/theme/: theme.rs
src/client/context/: context.rs  local_state.rs  mod.rs  source_context.rs
src/client/fs/: entry_list.rs  message.rs  mod.rs
src/client/ui/: mod.rs  tui_backend.rs
src/client/ui/views/: mod.rs  tui_view.rs
src/client/ui/widgets/: mod.rs  tui_entry_list.rs  tui_footer.rs  tui_message.rs  tui_prompt.rs  tui_topbar.rs
src/client/util/: display.rs  event.rs  format.rs  input.rs  mod.rs  sort.rs  style.rs
src/server/: dbus_monitor.rs  main.rs  message.rs  server.rs
src/server/config/: mod.rs
src/server/config/default/: default.rs
