[package]
name = "tsuchita"
version = "0.1.0"
authors = ["Jiayi Zhao <jeff.no.zhao@gmail.com>"]
homepage = "https://github.com/kamiyaa/tsuchita"
license = "LGPL-3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tsuchita-server"
path = "src/server/main.rs"

[[bin]]
name = "tsuchita-viewer"
path = "src/client/main.rs"

[dependencies]
actix-web = "^3"
chrono = "^0"
dbus = "^0"
lazy_static = "^1"
serde = "^1"
termion = "^1"
toml = "^0"
tui = "^0"
unicode-width = "^0"
